--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ div.deuxieme,
 .competences,
 .projets {
     margin: 16px;
+    padding: 16px;
     background-color: #1B263B;
     display: flex;
     flex-direction: column;
@@ -62,6 +63,12 @@ div.deuxieme,
 }
 
 div.premiere {
+    align-items: center;
+}
+
+.titres-premier {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -85,9 +92,10 @@ img.photoProfil {
 }
 
 div.bio {
-    margin: 16px;
+    margin-top: 24px;
     padding: 12px;
     border-radius: 12px;
+    border: solid 2px aliceblue;
     background-color: #202d47;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
@@ -142,11 +150,8 @@ button.cv {
 }
 
 div.imgFormations {
-    min-width: 82px;
-    min-height: 82px;
-
-    max-width: 82px;
-    max-height: 82px;
+    width: 82px;
+    height: 82px;
 
     margin-right: 12px;
 }
@@ -189,8 +194,7 @@ img.formationsLogo {
     margin-bottom: 0;
 }
 
-.compétenceLogo,
-.technoLogo {
+.compétenceLogo {
     width: 32px;
     height: 32px;
 
@@ -230,8 +234,9 @@ img.formationsLogo {
     justify-content: space-evenly;
 }
 
-.skills {
-    margin-top: 12px;
+.skills,
+.projet-liste {
+    margin-top: 8px;
     padding: 12px;
     border-radius: 12px;
     background-color: #202d47;
@@ -254,7 +259,6 @@ img.formationsLogo {
 .titreSkill {
     color: aliceblue;
     font-size: 14px;
-    font-weight: bold;
     margin: 0;
 }
 
@@ -267,6 +271,7 @@ img.formationsLogo {
 .h3-projet {
     color: aliceblue;
     margin-bottom: 6px;
+    margin-top: 12px;
 }
 
 .logoGit {
@@ -285,6 +290,12 @@ img.formationsLogo {
     color: aliceblue;
 }
 
+.projet {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-bottom: solid 1px rgba(128, 128, 128, 0.527);
+}
+
 .projets-github {
     align-items: center;
 }
@@ -295,7 +306,7 @@ img.formationsLogo {
 
 ul {
     margin-top: 0;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 
 #last.ul {
@@ -325,6 +336,7 @@ div.navButton {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-grow: 4;
     height: 100%;
     width: 120px;
 
@@ -339,4 +351,193 @@ p.iconLabel {
     font-size: 12px;
     color: #00A7E1;
     margin: 0;
+}
+
+/* RESPONSIVE */
+
+/* Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {}
+
+/* Medium devices (tablets, 768px and up)*/
+
+@media (min-width: 768px) {
+    .navBar {
+        visibility: hidden;
+    }
+
+    .footer {
+        display: none;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {
+
+    body {
+        margin-top: 2px;
+        display: flex;
+        justify-content: center;
+    }
+
+    #content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        min-width: 58%;
+        height: 100%;
+    }
+
+    .compétences-formations {
+        display: flex;
+    }
+
+    .deuxieme,
+    .competences {
+        flex-grow: 4;
+    }
+
+    #sidebar {
+        max-width: 25%;
+    }
+
+    div.premiere,
+    div.deuxieme,
+    .competences,
+    .projets {
+        display: flex;
+        padding: 12px;
+        margin: 6px;
+    }
+
+    .premiere {
+        justify-content: space-evenly;
+    }
+
+    div.profil {
+        height: 182px;
+        width: 182px;
+        margin: 32px;
+    }
+
+    button.cv {
+        margin-top: 24px;
+    }
+
+    h1 {
+        margin-bottom: 6px;
+    }
+
+    h2 {
+        color: #00A7E1;
+        font-size: 20px;
+    }
+
+    strong {
+        color: #00A7E1;
+    }
+
+    p {
+        line-height: 24px;
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+
+    span {
+        color: #00A7E1;
+        font-family: sans-serif;
+        font-size: 12px;
+        margin-top: 2px;
+    }
+
+    h3 {
+        margin-bottom: 8px;
+        font-size: 18px;
+    }
+
+    h4 {
+        font-size: 18px;
+    }
+
+    /* Competences */
+
+    .compétenceLogo {
+        width: 42px;
+        height: 42px;
+    }
+
+    .titreCompetence {
+        font-size: 16px;
+        margin-left: 12px;
+    }
+
+    .titreSkill {
+        font-size: 14px;
+    }
+
+    /* Formations */
+
+    .formation-lieu {
+        line-height: 24px;
+    }
+
+    div.imgFormations {
+        height: 92px;
+        width: 92px;
+    }
+
+    /* Projets */
+
+    .projet-liste {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .duo-projet {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
+    p {
+        line-height: 32px;
+        font-size: 18px;
+        margin-bottom: 24px;
+    }
+
+    .bio {
+        margin: 24px;
+    }
+
+    .projets-github {
+        margin-bottom: 12px;
+    }
+
+    .premiere {
+        justify-content: space-between;
+    }
+
+    body {
+        margin-top: 12px;
+    }
+
+    h3 {
+        margin-bottom: 12px;
+        font-size: 20px;
+    }
+
+    .titreSkill {
+        font-size: 16px;
+    }
+
+    .skills,
+    .projet-liste {
+        margin-top: 12px;
+    }
+
 }
