--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-color: #0D1B2A;
+    background-image: url(./patternpad_1.svg);
 }
 
 p,
@@ -20,13 +20,13 @@ li {
 }
 
 h2 {
-    color: #00A7E1;
+    color: #EFA00B;
     font-size: medium;
     margin-bottom: 18px;
 }
 
 strong {
-    color: #00A7E1;
+    color: #EFA00B;
 }
 
 p {
@@ -40,7 +40,7 @@ p {
 }
 
 span {
-    color: #00A7E1;
+    color: #EFA00B;
     font-family: sans-serif;
     font-size: 12px;
     margin-top: 2px;
@@ -56,7 +56,7 @@ div.deuxieme,
 .projets {
     margin: 16px;
     padding: 16px;
-    background-color: #1B263B;
+    background-color: #1b263bf7;
     display: flex;
     flex-direction: column;
     border-radius: 24px;
@@ -190,7 +190,7 @@ img.formationsLogo {
 }
 
 .formation-titre {
-    color: #00A7E1;
+    color: #EFA00B;
     margin-bottom: 0;
 }
 
@@ -249,7 +249,7 @@ img.formationsLogo {
 }
 
 .titreLangue {
-    color: #00A7E1;
+    color: #EFA00B;
     margin-top: 6px;
     margin-bottom: 12px;
 }
@@ -377,7 +377,7 @@ img.navIcons {
 
 p.iconLabel {
     font-size: 12px;
-    color: #00A7E1;
+    color: #EFA00B;
     margin: 0;
 }
 
@@ -462,12 +462,12 @@ p.iconLabel {
     }
 
     h2 {
-        color: #00A7E1;
+        color: #EFA00B;
         font-size: 20px;
     }
 
     strong {
-        color: #00A7E1;
+        color: #EFA00B;
     }
 
     p {
@@ -477,7 +477,7 @@ p.iconLabel {
     }
 
     span {
-        color: #00A7E1;
+        color: #EFA00B;
         font-family: sans-serif;
         font-size: 12px;
         margin-top: 2px;
